--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <h1>Frase Motivacional 1: </h1>
     <p>“Ter sucesso é falhar repetidamente, mas sem perder o entusiasmo” – Winston Churchill.</p>
   </div>
+  <div>
+    <h1>Frase Motivacional 2: </h1>
+    <p>“O homem não teria alcançado o possível se, repetidas vezes, não tivesse tentado o impossível. “- Max Weber</p>
+  </div>
+
 
 </body>
 
