--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <h1>Frase Motivacional 2: </h1>
     <p>“O homem não teria alcançado o possível se, repetidas vezes, não tivesse tentado o impossível. “- Max Weber</p>
   </div>
+  <div>
+    <h1>Frase Motivacional 3: </h1>
+    <p>“O talento vence jogos, mas só o trabalho em equipe ganha campeonatos. ” – Michael Jordan</p>
+  </div>
 
 
 </body>
